fix(css): a11y - update brand colors for higher contrast [MIDUWEB-2198]

--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -176,10 +176,10 @@
   --color-ks-green-disabled: var(--color-disabled);
   --color-ks-green-hover: var(--mdx-base-color-klubschule-green-700);
 
-  --color-ks-companies: #2F9DCC;
-  --color-ks-companies-active: #2F9DCC;
+  --color-ks-companies: #007EB3;
+  --color-ks-companies-active: #007EB3;
   --color-ks-companies-disabled: var(--color-disabled);
-  --color-ks-companies-hover: #2F9DCC;
+  --color-ks-companies-hover: #007EB3;
 
   --color-ibaw-turquoise: var(--mdx-base-color-ibaw-turquoise-600);
   --color-ibaw-turquoise-active: var(--mdx-base-color-ibaw-turquoise-700);
